--- a/css/verificador_css.css
+++ b/css/verificador_css.css
@@ -31,6 +31,10 @@ body {
     justify-content: right;
 }
 
+@view-transition {
+    navigation: auto;
+}
+
 /*---------- IMG VERIFICADOR --------*/
 .img-verificador {
     position: absolute;
