--- a/css/servicios_css.css
+++ b/css/servicios_css.css
@@ -34,6 +34,10 @@ header {
     place-content: center;
 }
 
+@view-transition {
+    navigation: auto;
+}
+
 /*--------------  HEADER -----------------*/
 .column-header {
     grid-template-columns: repeat(2, auto);
