--- a/servicio/style/merchandising_css.css
+++ b/servicio/style/merchandising_css.css
@@ -37,6 +37,10 @@ header {
     text-align: center;
 }
 
+@view-transition {
+    navigation: auto;
+}
+
 /*--------------  HEADER -----------------*/
 .column-header {
     grid-template-columns: repeat(2, auto);
