--- a/css/mi_carrito.css
+++ b/css/mi_carrito.css
@@ -305,10 +305,10 @@ main {
     width: 100%;
     background-color: black;
     color: white;
-    padding: 1rem;
+    padding-block: 1.2rem;
     text-transform: uppercase;
     font-size: clamp(10px, 3vw, 15px);
-    border-radius: 2rem;
+    border-radius: 1.5rem;
     cursor: pointer;
     transition: all .3s ease-in-out;
 }
