--- a/css/mi_carrito.css
+++ b/css/mi_carrito.css
@@ -305,9 +305,9 @@ main {
     width: 100%;
     background-color: black;
     color: white;
-    padding-block: 1.2rem;
+    padding-block: 1rem;
     text-transform: uppercase;
-    font-size: clamp(10px, 3vw, 15px);
+    font-size: clamp(13px, 3vw, 15px);
     border-radius: 1.5rem;
     cursor: pointer;
     transition: all .3s ease-in-out;
@@ -485,9 +485,9 @@ main {
     bottom: 2%;
     background-color: black;
     padding-block: 1rem;
-    padding-inline: 3rem;
+    padding-inline: 4rem;
     color: white;
-    font-size: clamp(12px, 3vw, 16px);
+    font-size: clamp(14px, 3vw, 16px);
     cursor: pointer;
     transition: all .3s ease-in-out;
 }
@@ -517,7 +517,6 @@ main {
 }
 .container {
     background-color: white;
-    width: clamp(250px, 40vw, 400px);
     border-radius: 15px;
     padding: 1.5rem;
 }
@@ -527,11 +526,14 @@ main {
 .alert-text {
     font-size: clamp(13px, 3vw, 16px);
 }
+.alert-text-2 {
+    font-size: clamp(10px, 3vw, 13px);
+    font-weight: 600;
+}
 .gap-alert {
     gap: 1rem;
 }
 .btn-alert {
-    background-color: rgb(32, 32, 219);
     color: white;
     padding-block: .7rem;
     padding-inline: 1.2rem;
@@ -539,11 +541,50 @@ main {
     font-size: clamp(10px, 3vw, 15px);
     cursor: pointer;
     transition: all .3s ease-in-out;
+    background-color: rgb(32, 32, 219);
+}
+.btn-submit {
+    font-family: "Gidole", sans-serif;
+    color: white;
+    padding-block: .7rem;
+    padding-inline: 1.2rem;
+    border-radius: 5px;
+    font-size: clamp(13px, 3vw, 15px);
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+    background-color: rgb(32, 32, 219);
+}
+.btn-submit:hover {
+    background-color: white;
+    color: rgb(32, 32, 219);
+    box-shadow: 0 0 5px rgb(32, 32, 219);
 }
 .btn-alert:hover {
     background-color: white;
     color: rgb(32, 32, 219);
-    box-shadow: 0 0 5px rgb(32, 32, 219);
+    box-shadow: 0 0 3px rgb(32, 32, 219);
+}
+.btn-volver {
+    font-size: clamp(13px, 3vw, 15px);
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+select {
+    width: 100%;
+    padding-block: .5rem;
+    font-family: "Gidole", sans-serif;
+    font-size: clamp(10px, 3vw, 14px);
+    border: 1px solid black;
+    border-radius: 5px;
+}
+#distrito {
+    width: 100%;
+    padding-block: .5rem;
+    font-family: "Gidole", sans-serif;
+    font-size: clamp(10px, 3vw, 14px);
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
 
