--- a/css/productos_css.css
+++ b/css/productos_css.css
@@ -82,16 +82,21 @@ header {
 .productos {
     padding: 5rem;
 }
+.productos-column-1 {
+    grid-template-columns: repeat(1, auto);
+}
+.productos-column-2 {
+    grid-template-columns: repeat(2, auto);
+    gap: 10rem;
+}
 .productos-column-3 {
     grid-template-columns: repeat(3, auto);
     gap: 10rem;
 }
-.productos-column-1 {
-    grid-template-columns: repeat(1, auto);
-}
 .item-img {
-    width: 8.5rem;
-    height: 20rem;
+    /* width: 8.5rem; */
+    height: 21rem;
+     object-fit: cover;
     filter: grayscale(100%);
     transition: all .3s ease-in-out;
     cursor: pointer;
@@ -121,7 +126,7 @@ header {
     margin-bottom: 5rem;
     text-transform: uppercase;
     color: #401e08;
-    font-size: clamp(25px, 3vw, 35px);
+    font-size: clamp(30px, 3vw, 35px);
     font-family: 'Bilcase Demo', sans-serif;
     letter-spacing: 2px;
 }
@@ -158,7 +163,7 @@ header {
     gap: 6rem;
 }
 .item-flex {
-    width: 200px;
+    /* width: 200px; */
 }
 .item-flex-2 {
     width: 100%;
@@ -371,6 +376,10 @@ footer {
     .productos {
         padding: 5rem;
     }
+    .productos-column-2 {
+        grid-template-columns: repeat(2, auto);
+        gap: 8rem;
+    }
     .productos-column-3 {
         grid-template-columns: repeat(2, auto);
         gap: 8rem;
@@ -490,13 +499,18 @@ footer {
     .productos {
         padding: 3rem;
     }
+    .productos-column-2 {
+        grid-template-columns: repeat(2, auto);
+        gap: 8rem;
+    }
     .productos-column-3 {
         grid-template-columns: repeat(2, auto);
         gap: 8rem;
     }
     .item-img {
-        width: 8.5rem;
+        /* width: 8.5rem; */
         height: 20rem;
+        object-fit: cover;
         filter: grayscale(100%);
         transition: all .3s ease-in-out;
         cursor: pointer;
@@ -512,12 +526,12 @@ footer {
         filter: grayscale(0%);
         rotate: -10deg;
     }
-    .title-productos {
+    /* .title-productos {
         text-transform: uppercase;
         margin-bottom: 5rem;
         color: #401e08;
         font-size: clamp(20px, 3vw, 29px);
-    }
+    } */
 
     /*-------------- FOOTER --------------*/ 
     .footer-column-2 {
@@ -628,13 +642,18 @@ footer {
     .productos {
         padding: 3rem;
     }
+    .productos-column-2 {
+        grid-template-columns: repeat(1, auto);
+        gap: 8rem;
+    }
     .productos-column-3 {
         grid-template-columns: repeat(1 , auto);
         gap: 6rem;
     }
     .item-img {
-        width: 8.5rem;
+        /* width: 8.5rem; */
         height: 20rem;
+        object-fit: cover;
         filter: grayscale(100%);
         transition: all .3s ease-in-out;
         cursor: pointer;
@@ -651,10 +670,10 @@ footer {
         rotate: -10deg;
     }
     .title-productos {
-        text-transform: uppercase;
+        /* text-transform: uppercase; */
         margin-bottom: 3.6rem;
-        color: #401e08;
-        font-size: clamp(20px, 3vw, 29px);
+        /* color: #401e08; */
+        /* font-size: clamp(20px, 3vw, 29px); */
     }
 
     /*-------------- FOOTER --------------*/ 
