--- a/css/mi_carrito.css
+++ b/css/mi_carrito.css
@@ -570,6 +570,11 @@ select {
     font-size: clamp(10px, 3vw, 14px);
     border: 1px solid black;
     border-radius: 5px;
+    transition: all .3s ease-in-out;
+}
+#ubicacion:valid,
+select:valid {
+    border: 1px solid green;
 }
 #ubicacion {
     width: 97%;
@@ -596,6 +601,37 @@ select {
 #pay-total {
     font-weight: bold;
 }
+
+.message2 img {
+    width: 100%;
+    height: 160px;
+    object-fit: contain;
+    position: absolute;
+    top: -9rem;
+}
+.message2 {
+    position: relative;
+}
+.gap-message-2 {
+    gap: 1rem;
+}
+.btn-msg2 {
+    font-family: "Gidole", sans-serif;
+    background-color: rgb(32, 32, 219);
+    border: 1px solid rgb(32, 32, 219);
+    color: white;
+    padding-inline: 1.2rem;
+    padding-block: .5rem;
+    font-size: clamp(15px, 3vw, 17px);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+.btn-msg2:hover {
+    background-color: white;
+    color: rgb(32, 32, 219);
+}
+
 
 
 /*--------------  FOOTER -----------------*/
@@ -1160,6 +1196,9 @@ footer {
     .container {
         padding: 1rem;
     }
+    .message2 {
+        width: 300px;
+    }
 
     /*-------------- FOOTER --------------*/ 
     .footer {
@@ -1311,6 +1350,9 @@ footer {
     .container {
         padding: 1rem;
     }
+    .message2 {
+        width: 250px;
+    }
 
 
     /*-------------- FOOTER --------------*/ 
@@ -1434,6 +1476,9 @@ footer {
     /*----- MENSAJE EMERGENTE -----*/
     .container {
         padding: .8rem;
+    }
+    .message2 {
+        width: 220px;
     }
 
     /*-------------- FOOTER --------------*/ 
