--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -101,8 +101,9 @@ header {
     background-color: #ffa500;
     padding: 4rem;
     border-radius: 1rem;
-    min-width: 230px;
-    max-width: 100%;
+    width: 250px;
+    /* min-width: 230px; */
+    /* max-width: 100%; */
 }
 .producto-img {
     /* width: 130px; */
@@ -180,6 +181,67 @@ header {
 }
 .nota {
     font-size: 15px;
+}
+
+.ver-producto2 {
+    padding-inline: 5rem;
+    padding-bottom: 5rem;
+}
+.new-productos-img {
+    background-color: #ffc71b;
+    border-radius: 1rem;
+    position: relative;
+    z-index: 0;
+    transition: all .3s ease-in-out;
+}
+.new-productos-img:hover {
+    .btn-new {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+    .img-new {
+        filter: blur(2px);
+    }
+}
+.img-new {
+    background-color: #ffc71b;
+    position: relative;
+    z-index: 1;
+    transition: all .3s ease-in-out;
+}
+.btn-new {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 0%;
+    z-index: -1;
+    transition: all .3s ease-in-out;
+}
+.btn-new button {
+    background-color: black;
+    border-radius: 5rem;
+    padding-inline: 1.2rem;
+    padding-block: .6rem;
+    color: white;
+    font-size: 15px;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+.btn-new button:hover {
+    background-color: rgb(39, 39, 39);
+}
+.new-productos-img > div > a > img {
+    width: 200px;
+    height: 300px;
+    object-fit: contain;
+}
+.grid-column-new {
+    grid-template-columns: repeat(4, auto);
+    gap: 1rem;
+    overflow: auto;
 }
 
 /*-------------- PRODUCTOS -----------------*/
@@ -419,6 +481,9 @@ footer {
     .ver-producto article {
         width: 980px;
     }
+    .ver-producto2 article {
+        width: 980px;
+    }
 
     /*--------------  FOOTER -----------------*/
     .my-footer {
@@ -500,8 +565,23 @@ footer {
     .ver-producto article {
         width: 600px;
     }
+    .ver-producto2 {
+        padding-inline: 5rem;
+        padding-bottom: 5rem;
+    }
+    .ver-producto2 article {
+        width: 600px;
+    }
     .ver-producto-column-2 {
         grid-template-columns: repeat(1, auto);
+    }
+    .ver-producto-img {
+        background-color: #ffa500;
+        padding: 4rem;
+        border-radius: 1rem;
+        width: auto;
+        min-width: 230px;
+        max-width: 100%;
     }
 
     /*-------------- PRODUCTOS --------------*/
@@ -642,8 +722,20 @@ footer {
     .ver-producto article {
         width: 600px;
     }
+    .ver-producto2 article {
+        width: 600px;
+    }
     .ver-producto-column-2 {
         grid-template-columns: repeat(1, auto);
+    }
+    
+    .ver-producto-img {
+        background-color: #ffa500;
+        padding: 4rem;
+        border-radius: 1rem;
+        width: auto;
+        min-width: 230px;
+        max-width: 100%;
     }
 
     /*-------------- PRODUCTOS --------------*/
@@ -786,6 +878,10 @@ footer {
     .productos section {
         margin-bottom: 3rem;
     } 
+    .ver-producto2 {
+        padding-inline: 3rem;
+        padding-bottom: 3rem;
+    }
     .ver-producto {
         padding-inline: 3rem;
     }
@@ -801,6 +897,7 @@ footer {
         background-color: #ffa500;
         padding: 2rem;
         border-radius: 1rem;
+        width: auto;
         min-width: 230px;
         max-width: 100%;
         height: 350px;
@@ -948,6 +1045,10 @@ footer {
     .ver-producto {
         padding-block: 3rem;
     }
+    .ver-producto2 {
+        padding-inline: 3rem;
+        padding-bottom: 3rem;
+    }
     .ver-producto-column-2 {
         grid-template-columns: repeat(1, auto);
         gap: 1rem;
@@ -957,6 +1058,7 @@ footer {
         background-color: #ffa500;
         padding: 2rem;
         border-radius: 1rem;
+        width: auto;
         min-width: 230px;
         max-width: 100%;
         height: 370px;
