--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -211,6 +211,9 @@ header {
     position: relative;
     z-index: 1;
     transition: all .3s ease-in-out;
+    border-radius: 1rem;
+    padding-inline: .5rem;
+    padding-block: .4rem;
 }
 .btn-new {
     position: absolute;
@@ -235,8 +238,9 @@ header {
 }
 .new-productos-img > div > a > img {
     width: 200px;
-    height: 300px;
+    height: 250px;
     object-fit: contain;
+    filter: drop-shadow(0 0 3px white);
 }
 .grid-column-new {
     grid-template-columns: repeat(4, auto);
