--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -219,22 +219,22 @@ header {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 0%;
+    height: 20%;
     z-index: -1;
     transition: all .3s ease-in-out;
 }
 .btn-new button {
     background-color: black;
     border-radius: 5rem;
-    padding-inline: 1.2rem;
-    padding-block: .6rem;
+    padding-inline: 1.5rem;
+    padding-block: .8rem;
     color: white;
     font-size: 15px;
     cursor: pointer;
     transition: all .3s ease-in-out;
 }
 .btn-new button:hover {
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(65, 65, 65);
 }
 .new-productos-img > div > a > img {
     width: 200px;
@@ -246,6 +246,14 @@ header {
     grid-template-columns: repeat(4, auto);
     gap: 1rem;
     overflow: auto;
+    scrollbar-width: none;
+}
+.new-title {
+    font-size: clamp(25px, 3vw, 30px);
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-family: 'Bilcase Demo', sans-serif;
+    margin-bottom: 2rem;
 }
 
 /*-------------- PRODUCTOS -----------------*/
@@ -1244,6 +1252,10 @@ footer {
         width: 210px;
         height: 320px;
         object-fit: cover;
+    }
+    .ver-producto2 {
+        padding-inline: 2.5rem;
+        padding-bottom: 3rem;
     }
 
     /*-------------- PRODUCTOS --------------*/ 
