--- a/css/mi_carrito.css
+++ b/css/mi_carrito.css
@@ -57,7 +57,15 @@ main {
 .flex-space {
     justify-content: space-between;
 }
-
+.gap-car {
+    gap: 1rem;
+}
+.grid-row {
+    grid-template-rows: 4rem 1fr auto;
+}
+.cat {
+    padding-bottom: 2rem;
+}
 
 @view-transition {
     navigation: auto;
@@ -119,11 +127,15 @@ main {
     transition: all .5s ease-in-out;
 }
 #mi-carrito {
-    overflow:scroll;
+    overflow: scroll;
     scrollbar-width: none;
-    height: 100vh;
-    padding-top: .5rem;
-    padding-bottom: 3rem;
+    /* height: 50%; */
+    /* padding-top: .5rem; */
+    /* padding-bottom: 3rem; */
+}
+.p {
+    width: 100%;
+    /* height: 6rem; */
 }
 #burgercheck:checked ~ ul  {
     left: 0;
@@ -500,19 +512,20 @@ main {
 }
 
 /*------------- FINALIZAR COMPRA -------------*/
-.finalizar {
+/* .finalizar {
     position: absolute;
     right: 0%;
-}
+} */
 .finalizar button {
-    position: fixed;
+    /* position: fixed;
     z-index: 9999;
     right: 1%;
-    bottom: 2%;
+    bottom: 2%; */
+    width: 100%;
     background-color: black;
     border: 1px solid rgb(48, 48, 48);
     padding-block: 1rem;
-    padding-inline: 5rem;
+    /* padding-inline: 5rem; */
     border-radius: 5px;
     color: white;
     font-size: clamp(14px, 3vw, 16px);
