--- a/css/mi_carrito.css
+++ b/css/mi_carrito.css
@@ -137,13 +137,9 @@ main {
 #mi-carrito {
     overflow: scroll;
     scrollbar-width: none;
-    /* height: 50%; */
-    /* padding-top: .5rem; */
-    /* padding-bottom: 3rem; */
 }
 .p {
     width: 100%;
-    /* height: 6rem; */
 }
 #burgercheck:checked ~ ul  {
     left: 0;
@@ -611,21 +607,42 @@ select {
     padding-block: .5rem;
     padding-left: .2rem;
     font-family: "Gidole", sans-serif;
-    font-size: clamp(10px, 3vw, 14px);
+    font-size: 15px;
     border: 1px solid black;
     border-radius: 5px;
     transition: all .3s ease-in-out;
 }
 #ubicacion:valid,
-select:valid {
+select:valid,
+#telefono:valid {
     border: 1px solid green;
+    outline: 1px solid green;
 }
-#ubicacion {
-    width: 97%;
+#ubicacion:invalid,
+select:invalid,
+#telefono:invalid {
+    border: 1px solid red;
+    outline: 1px solid red;
+}
+input[type="tel"],
+input[type="text"] {
+    border: 1px solid red;
+    outline: 1px solid red;
     padding-block: .5rem;
     padding-left: .5rem;
+}
+
+#ubicacion {
+    width: 97%;
     font-family: "Gidole", sans-serif;
-    font-size: clamp(10px, 3vw, 14px);
+    font-size: 15px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+#telefono {
+    width: 97%;
+    font-family: "Gidole", sans-serif;
+    font-size: 15px;
     border: 1px solid black;
     border-radius: 5px;
 }
