--- a/css/embajadoras_css.css
+++ b/css/embajadoras_css.css
@@ -79,28 +79,28 @@ header {
     color: #401e08;
 }
 
-/*------------- MERCHANDINSING -------------*/
-.merchandinsing {
+/*------------- EMBAJADORAS --------------*/
+.embajadoras {
     background-color: rgb(0, 0, 0);
     width: 100%;
     height: 800px;
 }
-.merchandinsing-img {
+.embajadoras-img {
     width: 100%;
     height: 800px;
     position: absolute;
-    background: url(https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da2f538e0510d01f15c65_servicio-6.png) no-repeat;
+    /* background: url(https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da2f538e0510d01f15c65_servicio-6.png) no-repeat; */
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     opacity: .2;
     filter: blur(2px);
 }
-.mer-div {
+.em-div {
     height: 800px;
     position: relative;
 }
-.mer-title {
+.em-title {
     font-size: clamp(30px, 3vw, 45px);
     text-transform: uppercase;
     color: white;
@@ -108,17 +108,17 @@ header {
     font-family: 'Bilcase Demo', sans-serif;
     letter-spacing: 3px;
 }
-.mer-text {
+.em-text {
     font-size: clamp(17px, 3vw, 20px);
     color: white;
 }
-.mer-text p {
+.em-text p {
     width: 660px;
 }
-.gapmer {
+.gapem {
     gap: 40px;
 }
-.mer-button button {
+.em-button button {
     width: 17rem;
     color: white;
     background-color: #000000;
@@ -131,70 +131,9 @@ header {
     cursor: pointer;
     box-shadow: 0 0 2px rgb(85, 85, 85);
 }
-.mer-button button:hover {
+.em-button button:hover {
     color: black;
     background-color: white;
-}
-
-/*------------- DISEÑOS ------------*/
-.diseños {
-    padding: 5rem;
-}
-.diseños-title {
-    font-size: clamp(20px, 3vw, 25px);
-    text-transform: uppercase;
-    font-family: 'Bilcase Demo', sans-serif;
-    letter-spacing: 2px;
-}
-.diseños-text {
-    font-size: clamp(15px, 3vw, 20px);
-}
-.gapdi {
-    gap: 20px;
-}
-.gapdi-2 {
-    gap: 2.3rem;
-}
-.grid-column-diseño {
-    grid-template-columns: repeat(3, auto);
-    margin-top: 3.5rem;
-}
-.dis-img {
-    position: relative;
-    transition: all .3s;
-}
-.dis-text {
-    position: absolute;
-    top: 0px;
-    z-index: -1;
-}
-.dis-text {
-    width: 270px;
-    height: 360px;
-    background-color: red;
-    border-radius: 15px;
-}
-.dis-img > img {
-    width: 300px;
-    height: 390px;
-    border-radius: 15px;
-    transition: all .3s ease-in-out;
-    box-shadow: 0px 0px 10px rgb(131, 130, 130);
-}
-.dis-img > img:hover {
-    scale: 1.1;
-}
-.dis-etiqueta {
-    margin-top: 3.5rem;
-}
-.dis-etiqueta img {
-    width: 62rem;
-    border-radius: 15px;
-    transition: all .3s ease-in-out;
-    box-shadow: 0px 0px 10px rgb(131, 130, 130);
-}
-.dis-etiqueta img:hover {
-    scale: 1.1;
 }
 
 /*--------------  FOOTER -----------------*/
@@ -416,12 +355,10 @@ footer {
         height: 100%;
     }
 
-    /*------------- MERCHANDISING --------------*/
-
     /*------------- DISEÑOS --------------*/
-    .grid-column-diseño {
+    /* .grid-column-diseño {
         grid-template-columns: repeat(2, auto);
-    }
+    } */
 
     /*-------------- FOOTER --------------*/ 
     .footer-column-2 {
@@ -528,14 +465,13 @@ footer {
     }
 
     /*------------- DISEÑOS --------------*/
-    .grid-column-diseño {
+    /* .grid-column-diseño {
         grid-template-columns: repeat(2, auto);
     }
     .dis-img img {
         width: 280px;
         height: 370px;
-    }
-
+    } */
 
     /*-------------- FOOTER --------------*/ 
     .footer-column-2 {
@@ -645,7 +581,7 @@ footer {
     }
 
     /*------------- DISEÑOS --------------*/
-    .diseños {
+    /* .diseños {
         padding: 3rem;
     }
     .grid-column-diseño {
@@ -654,7 +590,7 @@ footer {
     .dis-img img {
         width: 300px;
         height: 390px;
-    }
+    } */
 
     /*-------------- FOOTER --------------*/ 
     .footer {
@@ -767,7 +703,7 @@ footer {
         width: 350px;
     }
 
-    /*------------- DISEÑOS --------------*/
+    /* ------------- DISEÑOS --------------
     .diseños {
         padding: 3rem;
     }
@@ -777,7 +713,7 @@ footer {
     .dis-img img {
         width: 290px;
         height: 380px;
-    }
+    } */
 
     /*-------------- FOOTER --------------*/ 
     .footer {
@@ -894,7 +830,7 @@ footer {
         width: 300px;
     }
 
-    /*------------- DISEÑOS --------------*/
+    /* ------------- DISEÑOS --------------
     .diseños {
         padding: 3rem;
     }
@@ -904,7 +840,7 @@ footer {
     .dis-img img {
         width: 260px;
         height: 350px;
-    }
+    } */
 
     /*-------------- FOOTER --------------*/ 
     .footer {
