--- a/css/embajadoras_css.css
+++ b/css/embajadoras_css.css
@@ -89,7 +89,7 @@ header {
     width: 100%;
     height: 800px;
     position: absolute;
-    /* background: url(https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da2f538e0510d01f15c65_servicio-6.png) no-repeat; */
+    background: url("https://cdn.prod.website-files.com/680f81021936b0d565d34173/684c6724ed437048751f0915_vecteezy_asian-female-talking-about-sale-report-in-video-conference_7389497%20(1).jpg") no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -136,6 +136,37 @@ header {
     background-color: white;
 }
 
+/*------- INFOMRACION EMBAJADORAS --------*/
+.container-em  {
+    width: 100%;
+    padding-block: 5rem;
+}
+.img-em {
+    width: 450px;
+}
+.img-em img {
+    width: 400px;
+    height: 28rem;
+    object-fit: contain;
+}
+.text-em {
+    width: 450px;
+}
+.text-em p {
+    font-size: clamp(15px, 3vw, 18px);
+}
+.text-em h2 {
+    font-size: clamp(25px, 3vw, 30px);
+}
+.grid-template-column-em {
+    grid-template-columns: repeat(2, auto);
+}
+.gap-em {
+    gap: 1rem;
+}
+.gap-em2 {
+    gap: 2rem;
+}
 /*--------------  FOOTER -----------------*/
 footer {
     background-color: #FDFAE9;
