--- a/servicio/style/merchandising_css.css
+++ b/servicio/style/merchandising_css.css
@@ -94,7 +94,7 @@ header {
     background-position: center;
     background-attachment: fixed;
     opacity: .2;
-    filter: blur(2px);
+    /* filter: blur(2px); */
 }
 .mer-div {
     height: 800px;
